fixed gaps and margins in feature section

--- a/css/main.css
+++ b/css/main.css
@@ -491,25 +491,20 @@ body {
 .feature__list {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: -30px;
-  margin-left: -30px;
+  gap: 30px;
 }
 
 .items {
   flex-basis: 100%;
-  margin-left: 30px;
-}
-.items:not(:last-child) {
-  margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
   .items {
-    flex-basis: calc((100% - 60px) / 2);
+    flex-basis: calc((100% - 30px) / 2);
   }
 }
 @media screen and (min-width: 1200px) {
   .items {
-    flex-basis: calc((100% - 120px) / 4);
+    flex-basis: calc((100% - 90px) / 4);
   }
 }
 
