--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -8,21 +8,16 @@
 .feature__list {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: -30px;
-  margin-left: -30px;
+  gap: 30px;
 }
 
 .items {
   flex-basis: 100%;
-  margin-left: 30px;
-  &:not(:last-child) {
-    margin-bottom: 30px;
-  }
   @include tablet {
-    flex-basis: calc((100% - 60px) / 2);
+    flex-basis: calc((100% - 30px) / 2);
   }
   @include desktop {
-    flex-basis: calc((100% - 120px) / 4);
+    flex-basis: calc((100% - 90px) / 4);
   }
 }
 
